--- a/static/js/package.json
+++ b/static/js/package.json
@@ -1,8 +1,10 @@
 {
   "devDependencies": {
+    "@types/ace": "0.0.35",
     "@types/bootstrap": "^3.3.35",
     "@types/es6-shim": "^0.31.34",
     "@types/jquery": "^3.2.11",
     "@types/katex": "^0.5.0"
-  }
+  },
+  "dependencies": {}
 }
